# gl-racer

./: CCamera.h  CCar.cpp  CCar.h  CMakeLists.txt  CMesh.h  CModel.h  CWorld.cpp  CWorld.h  README  glad.c  main.cpp  shader_s.h
blender/: catcar.blend  sign.blend  world.blend
include/glad/: glad.h
objects/: cat_car.mtl  grass.png-autosave.kra  sign.mtl  world.mtl
